packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__const_variable_declaration__const x  = [1, 1].snap
---
source: packages/llvm/src/tests/variable_declaration/const_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %"x|_|" = alloca [2 x double], align 8
  %"1" = getelementptr [2 x double], [2 x double]* %"x|_|", i64 0, i64 0
  store double 1.000000e+00, double* %"1", align 8
  %"3" = getelementptr [2 x double], [2 x double]* %"x|_|", i64 0, i64 1
  store double 1.000000e+00, double* %"3", align 8
  ret void
}

