packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__const_variable_declaration__const x  = {a : 1, b : true}.snap
---
source: packages/llvm/src/tests/variable_declaration/const_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x_ = alloca <{ double, i1 }>, align 8
  %"1" = getelementptr <{ double, i1 }>, <{ double, i1 }>* %x_, i32 1, i32 0
  store double 1.000000e+00, double* %"1", align 8
  %"3" = getelementptr <{ double, i1 }>, <{ double, i1 }>* %x_, i32 1, i32 1
  store i1 true, i1* %"3", align 1
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

