packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__const_variable_declaration__const x : boolean = (false).snap
---
source: packages/llvm/src/tests/variable_declaration/const_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x = alloca i64, align 8
  store i1 false, i64* %x, align 1
  ret void
}

